force-app/main/default/objects/Rental__c/fields/Additional_charges__c.field-meta.xml
<CustomField>
    <fullName>Additional_charges__c</fullName>
    <label>Additional charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>