force-app/main/default/objects/Rental__c/fields/Total_cost__c.field-meta.xml
<CustomField>
    <fullName>Total_cost__c</fullName>
    <label>Total cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>