force-app/main/default/objects/Rental__c/validationRules/Rental_Start_Date_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Rental_Start_Date_Before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_date__c &gt;= End_date__c</errorConditionFormula>
    <errorMessage>The rental start date must be before the rental end date</errorMessage>
</ValidationRule>